# Isildur

./: .gitignore  NOTICE  README.md  pyproject.toml
.github/workflows/: ci.yml
Isildur/: README.md  pyproject.toml
Isildur/.github/workflows/: ci.yml
Isildur/benchmarks/: benchmark_mnist.py
Isildur/c/: isildur.c  isildur.h
Isildur/isildur/: __init__.py  cim.py  fusion.py  nn_to_hdc.py  serva.py
Isildur/isildur/tests/: test_isildur.py
benchmarks/: benchmark_mnist.py
c/: Makefile  demo_isildur.c  isildur.c  isildur.h  test_isildur.c
isildur/: __init__.py  arthedain.py  cli.py  core.py  fpga_backend.py  nn_to_hdc.py  papers.py
isildur/tests/: __init__.py  test_isildur.py
