[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "isildur"
version = "1.0.0"
description = "Turn Any Neural Network into VSA/HDC — Ultra-Low-Power Inference on Neuromorphic FPGAs Without Backpropagation"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "Enotrium", email = "dev@enotrium.ai"},
]
requires-python = ">=3.9"
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.21.0",
]
[project.optional-dependencies]
vision = ["torchvision>=0.15.0"]
dev = ["pytest>=7.0", "black", "ruff"]
hls = ["vitis-hls", "pyverilog"]

[project.urls]
Homepage = "https://github.com/Enotrium/Isildur"
Repository = "https://github.com/Enotrium/Isildur"

[project.scripts]
isildur = "isildur.cli:main"

[tool.setuptools.packages.find]
include = ["isildur*"]

[tool.setuptools.package-data]
"*" = ["*.md", "*.txt", "*.h", "*.cpp", "*.v", "*.tcl"]

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.ruff]
line-length = 88
target-version = "py39"
select = ["E", "F", "W"]